<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cryptocurrency_rates_titile">Cryptocurrency rates</string>
    <string name="search">Search</string>
    <string name="filtered">Filtered</string>
    <string name="sort_descending">Sort descending</string>
    <string name="sort_ascending">Sort ascending</string>
    <string name="alphabetically">Alphabetically A - Z</string>
    <string name="back">Back</string>
    <string name="favorite">Favorite</string>

    <string name="one_day">1d</string>
    <string name="seven_days">7d</string>
    <string name="thirty_days">30d</string>
    <string name="sixty_days">60d</string>
    <string name="ninety_days">90d</string>
    <string name="one_year">1y</string>
</resources>